--- a/index.html
+++ b/index.html
@@ -3,39 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>Vk_log_in</title>
-    <script defer src="{{ url_for('static', filename='app.js') }}"></script>
-    <script defer src="https://vk.com/js/api/openapi.js?136"></script>
+	
+    <script type="text/javascript" src="jquery-3.5.1.js"></script>
+	
 </head>
 <body>
-    <h3>Авторизация через ВК</h3>
+<h2>Получение списка друзей и имени</h2>
+https://oauth.vk.com/authorize?client_id=7534918&display=page&scope=friends&response_type=token&v=5.52
+https://oauth.vk.com/blank.html#access_token=61a082cc603e1e7b03151e6992f40e9b28ca27c34e26a069ac7ea57df43a212327681e1ff0e11974215c1&expires_in=86400&user_id=21309667
 
-    <script type="text/javascript">
-        VK.init({ apiId: 7534918 });
-    </script>
 
-    <script type="text/javascript">
-        VK.Auth.login(function(response) {
-            if (response.session) {
-                showAuthData(response.session);
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+<h2>
+<div class="text-center">
+	<a role="button" href="https://oauth.vk.com/authorize?client_id=7534918&redirect_uri=QlaVs.github.io/&scope=friends&response_type=token&v=5.52" class="btn col-sm-4 btn-outline-primary btn-lg" id="btn">Авторизоваться</a>
+</div>
+</h2>
 
-            if (response.settings) {
-                console.log(response.settings);
-                // Выбранные настройки доступа пользователя если они были запрошены
-            }
-            } else {
-            // Пользователь нажал кнопку Отмена в окне авторизации
-            }
+<script>
+	
+    if(location.hash.indexOf("#access_token=")===0){
+        localStorage.token = location.hash.substring(14,99);
+        localStorage.session = Date.now() + 86400;
+        location.hash = "";
+    }
+
+    if(Date.now() <= parseInt(localStorage.session)){
+       $("#btn").hide();
+       send('friends.search',{count:5, fields:'photo_200'}, function (data) {
+            render(data.response);
         });
+        send('users.get',{}, function (data) {
+            //render
+	        const btn = '<button type="button" onclick="localStorage.clear(); location.reload();" class="btn btn-dark">Выйти</button>';
+            $('#username').html('Имя: '+data.response[0].first_name + btn).show();
+        });
+    }
 
+    /**
+     * @return {string}
+     */
+    function URL  (method, params) {
+	    if (!method) throw new Error('Method not found');
+	    params = params || {};
+	    params['access_token'] = localStorage.token;
+		return "https://api.vk.com/method/" + method + '?' + $.param(params);
+    }
 
-        function showAuthData(data) {
-            $('body').append('<p>expire: ' + data.expire +'</p>');
-            $('body').append('<p>mid: ' + data.mid +'</p>');
-            $('body').append('<p>fio: ' + data.user.first_name + ' ' + data.user.last_name +'</p>');
-            $('body').append('<p>userDomain: ' + data.user.domain +'</p>');
-            $('body').append('<p>-----------------------------------------------</p>');
+	function send(method, params, callback) {
+		$.ajax({
+			url: URL(method, params),
+			method: "GET",
+			dataType: "JSONP",
+			success: callback
+		});
+    }
+
+    function render(response) {
+        let html = '';
+        for(let i=1; i<response.length;i++){
+            let f = response[i];
+            html += "<div class=\"card col-sm\">" +
+                "<img class=\"card-img-top\" src=\""+f.photo_200+"\">" +
+                "<div class=\"card-body\">" +
+                "<h5 class=\"card-text\">"+f.first_name+' '+f.last_name+"</h5>" +
+                "</div>" +
+                "</div>";
         }
-    </script>
-
+        //console.log(html);
+        $("#friends").html(html);
+    }
+</script>
 </body>
 </html>
