--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -61,6 +61,8 @@
 
     function render(response) {
         var html = '';
+		temp = response;
+		console.log(temp);
         for(var i = 1; i < response.length; i++){
             var f = response[i];
             html += '<li>' +
