--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -54,7 +54,7 @@
 			url: URL(method, params),
 			method: "GET",
 			dataType: "JSONP",
-			success: console.log(data);
+			success: console.log(data)
 		});
     }
 
