--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -30,7 +30,7 @@
     if(Date.now() <= parseInt(localStorage.session)){
 		$("#btn").hide();
 		send('friends.search',{count:5}, function (data) {
-			render(data.response);
+			console.log(data);
 		});
 		send('users.get',{}, function (data) {
 			//render
@@ -55,9 +55,7 @@
 			url: URL(method, params),
 			method: "GET",
 			dataType: "JSONP",
-			success: function(data){
-				console.log(data);
-			}
+			success: func
 		});
     }
 
