--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -30,11 +30,11 @@
     if(Date.now() <= parseInt(localStorage.session)){
 		$("#btn").hide();
 		send('friends.search',{count:5}, function (data) {
-			console.log(data);
+			render(data);
 		});
 		send('users.get',{}, function (data) {
 			//render
-			const btn = '<button type="button" onclick="localStorage.clear(); location.reload();">Выйти</button>';
+			const btn = '<button type="button" onclick="localStorage.clear(); location.reload();">  Выйти</button>';
 			$('ul').html('Имя: ' + data.response[0].first_name + btn).show();
 		});
     }
