--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -29,14 +29,15 @@
 
     if(Date.now() <= parseInt(localStorage.session)){
 		$("#btn").hide();
+		send('users.get',{}, function (data) {
+			//render
+			const btn = '<button type="button" onclick="localStorage.clear(); location.reload();">Выйти</button>';
+			$('ul').html('Имя: ' + data.response[0].first_name + ' ' + btn).show();
+		});
 		send('friends.search',{count:5}, function (data) {
 			render(data.response.items);
 		});
-		send('users.get',{}, function (data) {
-			//render
-			const btn = '<button type="button" onclick="localStorage.clear(); location.reload();">  Выйти</button>';
-			$('ul').html('Имя: ' + data.response[0].first_name + btn).show();
-		});
+		
     }
 
     /**
@@ -61,10 +62,10 @@
 
     function render(response) {
         var html = '';
-        for(var i = 1; i < response.length; i++){
+        for(var i = 0; i < response.length; i++){
             var f = response[i];
             html += '<li>' +
-					'<a target="_blank" href="vk.com/id"' + f.uid + '>'+
+					'<a>'+
 						'<div>'+
 							'<h4>' + f.first_name + ' ' + f.last_name + '</h4>'+
 						'</div>'+
