--- a/Test_Auth/index.html
+++ b/Test_Auth/index.html
@@ -17,6 +17,7 @@
 </div>
 </h2>
 
+<h3></h3>
 <ul></ul>
 
 <script>
@@ -32,7 +33,7 @@
 		send('users.get',{}, function (data) {
 			//render
 			const btn = '<button type="button" onclick="localStorage.clear(); location.reload();">Выйти</button>';
-			$('ul').html('Имя: ' + data.response[0].first_name + ' ' + btn).show();
+			$('h3').html('Имя пользователя: ' + data.response[0].first_name + ' ' + btn).show();
 		});
 		send('friends.search',{count:5}, function (data) {
 			render(data.response.items);
@@ -65,11 +66,10 @@
         for(var i = 0; i < response.length; i++){
             var f = response[i];
             html += '<li>' +
-					'<a>'+
 						'<div>'+
+							"<img src=\""+f.photo_200+"\">"+
 							'<h4>' + f.first_name + ' ' + f.last_name + '</h4>'+
 						'</div>'+
-					'</a>'+
 					'</li>';
         }
 		console.log(html);
