--- a/ipredir/index.html
+++ b/ipredir/index.html
@@ -7,8 +7,8 @@
     var c = url.searchParams.get("addr");
     var final = 'https://ipqualityscore.com/api/json/ip/iWY48acUFG4aIun9wpZkIv8WpEeTycbp/';
     final = final.concat(c);
-    // window.location.replace(final);
-    document.write(final);
+    window.location.replace(final);
+    // document.write(final);
 </script>
 </body>
 </html> 
