--- a/ipredir/index.html
+++ b/ipredir/index.html
@@ -16,8 +16,7 @@
 	var x = new XMLHttpRequest();
 	x.open(options.method, cors_api_url + options.url);
 	x.onload = x.onerror = function() {
-		printResult(options.method + ' ' + options.url + '\n' + x.status + ' ' + x.statusText + '\n\n' +
-		(x.responseText || ''));
+		printResult(x.responseText);
 	};
 
 	if (/^POST/i.test(options.method)) {
@@ -38,7 +37,7 @@
 	var urlField = final;
 	(function() {
 		doCORSRequest({ method: this.id === 'post' ? 'POST' : 'GET', url: urlField},
-		function printResult(result) { consol.log(result); });
+		function printResult(result) { document.getElementById("json").textContent = JSON.stringify(result, undefined, 2); });
 	})();
 })();
 
@@ -57,6 +56,7 @@
     //}
 </script>
 
+<pre id="json"></pre>
 
 </body>
 </html> 
