--- a/ipredir/index.html
+++ b/ipredir/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script src='bigscript.js' defer='True'></script>
+<script src='smallscript.js' defer='True'></script>
 </head>
 <body>
 
